--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,11 @@ block content
       input(type="text" id="user-id" class="disabled-input" maxlength="12" placeholder="최대 12자" value="customer" readonly)
       button(id="diary" class="icon-diary" title="메모")
       button(id="calendar" class="icon-calendar" title="일정 관리")
-      button(id="map" class="icon-map" title="지도")
+      button(id="set-location" class="icon-map" title="처음 화면(위치설정은 길게 클릭)")
+      input(type="hidden" class="home-bounds" name="neLat")
+      input(type="hidden" class="home-bounds" name="neLng")
+      input(type="hidden" class="home-bounds" name="swLat")
+      input(type="hidden" class="home-bounds" name="swLng")
     div(class="menu-box search-box")
       input(type="search" id="keyword" placeholder="장소 검색")
       button(id="search" class="icon-search")
