--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Note & Map
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/lib/jquery-ui-dist/jquery-ui.min.css")
     //- link(rel="stylesheet" href="/lib/leaflet/dist/leaflet.css")
     link(rel="stylesheet", href="/stylesheets/style.css")
