--- a/public/stylesheets/note.css
+++ b/public/stylesheets/note.css
@@ -248,6 +248,7 @@ input[type=color]+label {
 .calendar-table th {
     font-size: 15px;
     height: 30px;
+    border-bottom: 1px solid #000000;
 }
 .calendar-table td {
     height: 70px;
